# FlappyBird-SFML

./: Bird.h  BirdSp.h  CMakeLists.txt  DrawShapes.h  Feelings.h  GameTemplate.h  JumpAnimation.h  Obstacles.h  Pipes.h  Power.h  README.md  Score.h  ScreenTemplate.h  Shapes.h  StartGame.h  StyleComponents.h  main.cpp
